[package]
name = "linkdrop"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
borsh = "0.6.1"
near-sdk = "0.9.2"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }

[workspace]
members = []
