[package]
name = "linkdrop"
version = "0.1.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2024"
publish = false
repository = "https://github.com/near/near-linkdrop"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.17.0", features = ["global-contracts"] }

[dev-dependencies]
near-sdk = { version = "5.14", features = ["unit-testing"] }
near-sandbox = "0.2.0"
near-api = "0.6.1"
test-log = {version = "0.2", default-features = false, features = ["trace"]}
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
anyhow = "1"
borsh = "1"
bs58 = "0.5"
ed25519-dalek = "2"
rand = "0.8"
sha2 = "0.10"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.16.0-rust-1.86.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:3220302ebb7036c1942e772810f21edd9381edf9a339983da43487c77fbad488"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]
